Bug 327705 - Crash when copying widget that has no UMLObject
Summary: Crash when copying widget that has no UMLObject
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Steyn
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-16 21:59 UTC by Joris Steyn
Modified: 2013-11-20 21:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joris Steyn 2013-11-16 21:59:57 UTC
A crash happens when copying a widget that has no UMLObject. Bug was introduced in 4.12 beta2.

Reproducible: Always

Steps to Reproduce:
1. Add a box to a diagram
2. Select the widget
3. Press CTRL+C
Actual Results:  
SIGSEGV

Expected Results:  
Widget is copied.
Comment 1 Joris Steyn 2013-11-16 22:01:03 UTC
Git commit 171182a085c8c83cb33fb1b92f075d973d6591da by Joris Steyn.
Committed on 16/11/2013 at 21:54.
Pushed by jorissteyn into branch 'KDE/4.12'.

Fix crash when copying widget

M  +3    -1    umbrello/clipboard/umlclipboard.cpp

http://commits.kde.org/umbrello/171182a085c8c83cb33fb1b92f075d973d6591da
Comment 2 Joris Steyn 2013-11-16 22:01:05 UTC
Git commit 9f2ed90a7bbcf7d77f3d979901f8d1a0700cc97c by Joris Steyn.
Committed on 16/11/2013 at 21:54.
Pushed by jorissteyn into branch 'master'.

Fix crash when copying widget

M  +3    -1    umbrello/clipboard/umlclipboard.cpp

http://commits.kde.org/umbrello/9f2ed90a7bbcf7d77f3d979901f8d1a0700cc97c