Fix crash when copying widget

BUG: 327705